# ai-fastapi-hw

./: README.md  run-dev.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/routers/: ai.py
backend/app/services/: nlp.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  api.js
