[project]
name = "ai-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "transformers>=4.43",
    "sentencepiece>=0.2.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "pypdf>=6.2.0",
    "sentence-transformers>=3.0,<4.0",
    "protobuf>=4.25,<5",
]
